# ADAS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: main.tex  notes.txt  references.bib
docs/chapters/: 01_uvod.tex  02_teorijska_podloga.tex  03_pregled_literature.tex  04_metodologija.tex  05_implementacija.tex  06_testiranje_i_rezultati.tex  07_zakljucak.tex
docs/other/: IndexDatabase.md  ProjectSpecifications.md  runSomeScripts.md
scripts/: debug_lanes.py  debug_obstacles.py  download_dataset.py  run_scenario.py  start_pulseaudio.bat  upload_dataset.py
scripts/context/: analyze_video.py
scripts/dataset/: build_index.py  download_dataset.py  export_samples.py  play_index_video.py  run_parser.py  sample_conditions.py  upload_dataset.py
src/adas/: __init__.py
src/adas/collision_risk/: __init__.py  metrics.py  (+3 more)
tests/: __init__.py  assert_colored.py
tests/collision_risk/: test_decision.py  test_estimator.py
tests/context/: conftest.py  test_dataset_integration.py  test_defaults.py  test_lane_state.py  test_road_surface.py  test_router.py  test_scene_metrics.py  test_types.py
tests/dataset/: test_annotation.py  test_indexer.py  test_loader_wrappers.py  test_lotvs_reader.py  test_parser.py  test_sampler.py  test_utils_io.py
tests/lane_detection/: test_processing.py
tests/obstacle_detection/: test_detector.py
tests/scenario/: test_runner.py
tests/ui/: test_backend_cv2.py  test_overlays.py
(+44 files in other folders)
