[project]
name = "adas"
version = "0.1.0"
description = "Computer Vision Applications in Collision Avoidance for Autonomous Vehicles and Advanced Driver Assistance Systems (ADAS)"
authors = [
    { name = "Daniel Batinić" }
]
readme = "README.md"
requires-python = ">=3.12,<3.15"

dependencies = [
    "opencv-python (>=4.10.0.84,<5.0.0.0)",
    "numpy (>=2.0.0,<3.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "scikit-image (>=0.26.0,<0.27.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.7,<0.16.0)",
    "black (>=26.3.1,<27.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "jupyterlab (>=4.5.6,<5.0.0)"
]